# sick_visionary_cpp_shared

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.adoc  CMakeLists.txt  CONTRIBUTING.md  README.adoc
3pp/boost/mpl/: O1_size.hpp  O1_size_fwd.hpp  advance.hpp  advance_fwd.hpp  always.hpp  and.hpp  apply.hpp  apply_fwd.hpp  apply_wrap.hpp  arg.hpp  arg_fwd.hpp  assert.hpp  at.hpp  at_fwd.hpp  back_fwd.hpp  back_inserter.hpp  base.hpp  begin_end.hpp  begin_end_fwd.hpp  bind.hpp  bind_fwd.hpp  bool.hpp  bool_fwd.hpp  clear.hpp  clear_fwd.hpp  comparison.hpp  contains.hpp  contains_fwd.hpp  deref.hpp  distance.hpp  distance_fwd.hpp  empty.hpp  empty_fwd.hpp  equal_to.hpp  erase_fwd.hpp  erase_key_fwd.hpp  eval_if.hpp  find.hpp  find_if.hpp  fold.hpp  (+68 more)
3pp/boost/mpl/aux_/: O1_size_impl.hpp  adl_barrier.hpp  advance_backward.hpp  advance_forward.hpp  arg_typedef.hpp  arithmetic_op.hpp  arity.hpp  arity_spec.hpp  at_impl.hpp  begin_end_impl.hpp  clear_impl.hpp  common_name_wknd.hpp  comparison_op.hpp  contains_impl.hpp  count_args.hpp  empty_impl.hpp  fold_impl.hpp  fold_impl_body.hpp  full_lambda.hpp  has_apply.hpp  has_begin.hpp  has_key_impl.hpp  has_rebind.hpp  has_size.hpp  has_tag.hpp  has_type.hpp  include_preprocessed.hpp  insert_impl.hpp  inserter_algorithm.hpp  integral_wrapper.hpp  is_msvc_eti_arg.hpp  iter_apply.hpp  iter_fold_if_impl.hpp  iter_fold_impl.hpp  lambda_arity_param.hpp  lambda_no_ctps.hpp  lambda_spec.hpp  lambda_support.hpp  largest_int.hpp  logical_op.hpp  (+29 more)
3pp/boost/mpl/aux_/config/: adl.hpp  arrays.hpp  bcc.hpp  bind.hpp  compiler.hpp  ctps.hpp  dmc_ambiguous_ctps.hpp  dtp.hpp  eti.hpp  forwarding.hpp  gcc.hpp  gpu.hpp  has_apply.hpp  has_xxx.hpp  integral.hpp  intel.hpp  lambda.hpp  msvc.hpp  msvc_typename.hpp  nttp.hpp  operators.hpp  overload_resolution.hpp  pp_counter.hpp  preprocessor.hpp  static_constant.hpp  ttp.hpp  typeof.hpp  use_preprocessed.hpp  workaround.hpp
3pp/boost/mpl/aux_/preprocessor/: add.hpp  def_params_tail.hpp  default_params.hpp  enum.hpp  ext_params.hpp  filter_params.hpp  params.hpp  partial_spec_params.hpp  range.hpp  repeat.hpp  sub.hpp  tuple.hpp
3pp/boost/mpl/limits/: arity.hpp  unrolling.hpp  vector.hpp
3pp/boost/mpl/set/: set0.hpp
3pp/boost/mpl/set/aux_/: at_impl.hpp  begin_end_impl.hpp  clear_impl.hpp  empty_impl.hpp  erase_impl.hpp  erase_key_impl.hpp  has_key_impl.hpp  insert_impl.hpp  insert_range_impl.hpp  item.hpp  iterator.hpp  key_type_impl.hpp  set0.hpp  size_impl.hpp  tag.hpp  value_type_impl.hpp
3pp/boost/mpl/vector/: vector0.hpp  vector0_c.hpp  vector10.hpp  vector10_c.hpp  vector20.hpp  vector20_c.hpp  vector30.hpp  vector30_c.hpp  vector40.hpp  vector40_c.hpp  vector50.hpp  vector50_c.hpp
3pp/boost/mpl/vector/aux_/: O1_size.hpp  at.hpp  back.hpp  begin_end.hpp  clear.hpp  empty.hpp  front.hpp  include_preprocessed.hpp  item.hpp  iterator.hpp  numbered.hpp  numbered_c.hpp  pop_back.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  size.hpp  tag.hpp  vector0.hpp
3pp/md5/: MD5.cpp  MD5.h
3pp/sha256/: LICENSE
src/: AuthenticationLegacy.cpp  AuthenticationLegacy.h  AuthenticationSecure.cpp  AuthenticationSecure.h  CoLa2ProtocolHandler.cpp  CoLa2ProtocolHandler.h  CoLaBProtocolHandler.cpp  CoLaBProtocolHandler.h  CoLaCommand.cpp  CoLaCommand.h  CoLaCommandType.h  CoLaError.h  CoLaParameterReader.cpp  CoLaParameterReader.h  CoLaParameterWriter.cpp  CoLaParameterWriter.h  ControlSession.cpp  ControlSession.h  FrameGrabber.h  FrameGrabberBase.cpp  FrameGrabberBase.h  IAuthentication.h  IProtocolHandler.h  ITransport.h  NumericConv.h  PointCloudPlyWriter.cpp  PointCloudPlyWriter.h  PointXYZ.h  SockRecord.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  VisionaryAutoIPScan.cpp  VisionaryAutoIPScan.h  VisionaryControl.cpp  VisionaryControl.h  VisionaryData.cpp  VisionaryData.h  VisionaryDataStream.cpp  (+8 more)
tests/: CMakeLists.txt
tests/src/: CoLa2ProtocolHandlerTest.cpp  EndianTest.cpp  MockTransport.cpp  MockTransport.h  NumericConvTest.cpp  VisionaryTMiniDataTest.cpp  main.cpp
